--- a/index.html
+++ b/index.html
@@ -1,7 +1,39 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
-        <title>WebCM</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>WebCM - Web Cartesi Machine</title>
+        <meta
+            name="description"
+            content="Linux RISC-V virtual machine, powered by the Cartesi Machine emulator, running in the browser via WebAssembly."
+        />
+        <meta
+            name="keywords"
+            context="WebCM, Cartesi Machine, Virtual Machine, Linux, RISC-V, Virtualization, WebAssembly, Emulator"
+        />
+        <meta property="og:title" content="WebCM - Web Cartesi Machine" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="WebCM" />
+        <meta
+            property="og:image"
+            content="https://edubart.github.io/webcm/social.png"
+        />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@cartesiproject" />
+        <meta
+            name="twitter:title"
+            content="WebCM - Linux virtualization in WebAssembly"
+        />
+        <meta
+            name="twitter:description"
+            content="Linux RISC-V virtual machine, powered by the Cartesi Machine emulator, running in the browser via WebAssembly."
+        />
+        <meta
+            name="twitter:image"
+            content="https://edubart.github.io/webcm/social.png"
+        />
+        <link rel="preconnect" href="https://cdn.jsdelivr.net" />
         <link rel="icon" href="favicon.svg" type="image/svg+xml" />
         <link
             rel="stylesheet"
